--- a/ResumeAssignment/index.html
+++ b/ResumeAssignment/index.html
@@ -7,24 +7,26 @@
     <title> Temurbek Farmonov | Resume Assignment</title>
   </head>
   <body class="home">
+    <a class="btn Download-link" href="###">Download PDF</a>
     <div class="content-wrapper">
-    <main>
+    <main class="content-wrapper">
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
-      <header>
+      <header class="header">
+        <div class="content-wrapper">
         <h1>Temurbek Farmonov</h1>
         <h2>Waketech Student and Web-developer</h2>
-
+      </div>
         <p>My name is Temurbek Farmonov, I am a 19 year old waketech student currently studying Web-development.
           I am currently taking two summer classes including WEB-210 and DBA-120. I am excited to continue learning Web-development over this next year and half till I gradaute waketech. </p>
       </header>
 
       <!-- ********************  PROJECTS / PORTFOLIO  ********************* -->
-      <section>
+      <section class="Resume-section">
         <h2>Featured Projects</h2>
         <p>View selected projects below. More information can be found at <a href="#####">T-Farmonov.com</a>.</p>
 
         <!-- Copy the whole <section> block to add more projects. -->
-        <section>
+        <section class="project-item">
           <h3>Sprout and Grow</h3>
           <img src="placeholderimages/thumbnail-3.jpg" alt="Really tall Palm trees ">
           <p>Created a Web Page for a plant nursery as my final project for a previous class.</p>
@@ -34,7 +36,7 @@
       </section>
 
       <!-- ***********************  WORK EXPERIENCE  *********************** -->
-      <section>
+      <section class="Resume-section">
         <h2>Work Experience</h2>
         <p>So Far I do not have any real work Experience with in the field of Web-development.</p>
 
@@ -49,7 +51,7 @@
       </section>
 
       <!-- ******************  EDUCATION & CERTIFICATIONS ****************** -->
-      <section>
+      <section class="Resume-section">
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
@@ -66,12 +68,12 @@
         <h2>Let's Keep in Touch!</h2>
 
         <!-- Social media and contact links. Add or remove any networks. -->
-        <ul>
-          <li><a href="mailto:tmfarmonov@my.waketech.edu">tmfarmonov@my.waketech.edu</a></li>
-          <li><a href="####" target="_blank">T-Farmonov.com</a></li>
-          <li><a href="https://x.com/i/flow/login" target="twitter">Twitter</a></li>
-          <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="my LinkedIn">LinkedIn</a></li>
-          <li><a href="https://www.facebook.com/" target="facebook">Facebook</a></li>
+        <ul class="socials">
+          <li><a href="mailto:tmfarmonov@my.waketech.edu"><img src="placeholderimages/Microsoft_Office-07-64.webp" alt="My Email"></a></li>
+          <li><a href="####" target="_blank"><img src="placeholderimages/external_link2-64.webp" alt="MyWebsite"></a></li>
+          <li><a href="https://x.com/i/flow/login" target="_blank"><img src="placeholderimages/X-64.webp" alt="my twitter"></a></li>
+          <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="_blank"><img src="placeholderimages/circle-linkedin-64.webp" alt="linkedin"></a></li>
+          <li><a href="https://www.facebook.com/" target="_blank"><img src="placeholderimages/2018_social_media_popular_app_logo_facebook-64.webp" alt="myfacebook"></a></li>
         </ul>
       </footer>
     </main>
