--- a/ResumeAssignment/index.html
+++ b/ResumeAssignment/index.html
@@ -9,6 +9,7 @@
   <body class="home">
     <a class="btn Download-link" href="###">Download PDF</a>
     <div class="content-wrapper">
+      <div class="content-bg">
     <main class="content-wrapper">
       <!-- ***********************  ABOUT / PROFILE  *********************** -->
       <header class="header">
@@ -41,12 +42,16 @@
         <p>So Far I do not have any real work Experience with in the field of Web-development.</p>
 
         <!-- Copy this whole <section> block to add more jobs. -->
-        <section>
+        <section class="work-item">
+          <div class="work-details">
           <h3>Server</h3>
           <p>Devils Ridge Golf Club</p>
           <p>I have been working there for over 2 years</p>
-          <p>Job summary goes here. Add as many paragraphs as you need.</p>
+        </div>
+        <div class="work-summary">
+          <p>As a part of the serving staff we are expected to keep the membership happy and make sure that they are having a fulfilling Experience.</p>
         </section>
+      </div>
         <!-- End of Job block. -->
       </section>
 
@@ -57,26 +62,26 @@
         <!-- Copy this whole <section> block to add more schools. -->
         <section>
           <h3>Waketech Community College - Raleigh</h3>
-          <p>Designation received or program name, year attended</p>
-          <p>Summary or accomplishments.</p>
+          <p>As of Right now I am enrolled in the waketech, Web-development program. Scheduled to Gradaute Summer of 2025</p>
+          <p>COMING SOON!!!!!</p>
         </section>
         <!-- End of School block. -->
       </section>
-
-      <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
-      <footer>
-        <h2>Let's Keep in Touch!</h2>
-
-        <!-- Social media and contact links. Add or remove any networks. -->
-        <ul class="socials">
-          <li><a href="mailto:tmfarmonov@my.waketech.edu"><img src="placeholderimages/Microsoft_Office-07-64.webp" alt="My Email"></a></li>
-          <li><a href="####" target="_blank"><img src="placeholderimages/external_link2-64.webp" alt="MyWebsite"></a></li>
-          <li><a href="https://x.com/i/flow/login" target="_blank"><img src="placeholderimages/X-64.webp" alt="my twitter"></a></li>
-          <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="_blank"><img src="placeholderimages/circle-linkedin-64.webp" alt="linkedin"></a></li>
-          <li><a href="https://www.facebook.com/" target="_blank"><img src="placeholderimages/2018_social_media_popular_app_logo_facebook-64.webp" alt="myfacebook"></a></li>
-        </ul>
-      </footer>
     </main>
+      </div>
   </div>
+        <!-- *****************  CONTACT INFO / SOCIAL MEDIA  ***************** -->
+        <footer>
+          <h2>Let's Keep in Touch!</h2>
+  
+          <!-- Social media and contact links. Add or remove any networks. -->
+          <ul class="socials">
+            <li><a href="mailto:tmfarmonov@my.waketech.edu"><img src="placeholderimages/Microsoft_Office-07-64.webp" alt="My Email"></a></li>
+            <li><a href="####" target="_blank"><img src="placeholderimages/external_link2-64.webp" alt="MyWebsite"></a></li>
+            <li><a href="https://x.com/i/flow/login" target="_blank"><img src="placeholderimages/X-64.webp" alt="my twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="_blank"><img src="placeholderimages/circle-linkedin-64.webp" alt="linkedin"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="placeholderimages/2018_social_media_popular_app_logo_facebook-64.webp" alt="myfacebook"></a></li>
+          </ul>
+        </footer>
   </body>
 </html>
