--- a/ResumeAssignment/index.html
+++ b/ResumeAssignment/index.html
@@ -5,8 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/ResumeAssignment.css">
     <title> Temurbek Farmonov | Resume Assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Playwrite+NZ&display=swap" rel="stylesheet">
+
   </head>
   <body class="home">
+    <nav>
+      <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li>
+              <a href="#">Services</a>
+              <ul class="dropdown">
+                  <li><a href="#">Web Design</a></li>
+                  <li><a href="#">Graphic Design</a></li>
+                  <li><a href="#">Logo Design</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Work Experience</a>
+              <ul class="dropdown">
+                  <li><a href="#">Relevant Work Experience</a></li>
+                  <li><a href="#">Other Work Experience</a></li>
+              </ul>
+          </li>
+          <li><a href="#">Contact</a>
+              <ul class="dropdown">
+                  <li><a href="#">Phone</a></li>
+                  <li><a href="#">Socials</a></li>
+                  <li><a href="#">Contact Form</a></li>
+              </ul>
+          </li>
+      </ul>
+  </nav>
     <a class="btn Download-link" href="###">Download PDF</a>
     <div class="content-wrapper">
       <div class="content-bg">
@@ -60,7 +91,7 @@
         <h2>Education</h2>
 
         <!-- Copy this whole <section> block to add more schools. -->
-        <section>
+        <section class="education-item">
           <h3>Waketech Community College - Raleigh</h3>
           <p>As of Right now I am enrolled in the waketech, Web-development program. Scheduled to Gradaute Summer of 2025</p>
           <p>COMING SOON!!!!!</p>
@@ -76,11 +107,11 @@
   
           <!-- Social media and contact links. Add or remove any networks. -->
           <ul class="socials">
-            <li><a href="mailto:tmfarmonov@my.waketech.edu"><img src="placeholderimages/Microsoft_Office-07-64.webp" alt="My Email"></a></li>
-            <li><a href="####" target="_blank"><img src="placeholderimages/external_link2-64.webp" alt="MyWebsite"></a></li>
-            <li><a href="https://x.com/i/flow/login" target="_blank"><img src="placeholderimages/X-64.webp" alt="my twitter"></a></li>
-            <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="_blank"><img src="placeholderimages/circle-linkedin-64.webp" alt="linkedin"></a></li>
-            <li><a href="https://www.facebook.com/" target="_blank"><img src="placeholderimages/2018_social_media_popular_app_logo_facebook-64.webp" alt="myfacebook"></a></li>
+            <li><a href="mailto:tmfarmonov@my.waketech.edu"><img src="placeholderimages/Microsoft_Office-07-64.png" alt="My Email"></a></li>
+            <li><a href="####" target="_blank"><img src="placeholderimages/external_link2-64.png" alt="MyWebsite"></a></li>
+            <li><a href="https://x.com/i/flow/login" target="_blank"><img src="placeholderimages/X-64.png" alt="my twitter"></a></li>
+            <li><a href="https://www.linkedin.com/in/temurbek-farmonov-029471187/" target="_blank"><img src="placeholderimages/circle-linkedin-64.png" alt="linkedin"></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><img src="placeholderimages/2018_social_media_popular_app_logo_facebook-64.png" alt="myfacebook"></a></li>
           </ul>
         </footer>
   </body>
